fix: update z-index tokens

--- a/src/components/splash-screen/style.module.scss
+++ b/src/components/splash-screen/style.module.scss
@@ -18,7 +18,7 @@
 
   background-color: color-rgb('background');
 
-  z-index: $z-top;
+  z-index: z('top');
 
   &._loading {
     opacity: opacity('0');
