--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -43,15 +43,17 @@ $opacity-tokens: (
 
 // Z-index
 
-$z-auto: auto !default;
-$z-top: 99999 !default;
-$z-500: 500 !default;
-$z-400: 400 !default;
-$z-300: 300 !default;
-$z-200: 200 !default;
-$z-100: 100 !default;
-$z-0: 0 !default;
-$z-bottom: -100 !default;
+$z-tokens: (
+  'auto': auto,
+  'top': 99999,
+  '500': 500,
+  '400': 400,
+  '300': 300,
+  '200': 200,
+  '100': 100,
+  '0': 0,
+  'bottom': -100
+) !default;
 
 
 // Typography
